<resources>
    <string name="app_name">kindle_app</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_x1">x1</string>
    <string name="lbl_x2">x2</string>
    <string name="lbl_12345_qwerty">12345@Qwerty!</string>
    <string name="lbl_follow_us">FOLLOW US!</string>
    <string name="msg_status_arrived">Status: Arrived Tokyo, JP sorting center</string>
    <string name="lbl_reset_password">RESET PASSWORD</string>
    <string name="msg_edit_product_su">Edit Product Successful!</string>
    <string name="msg_upload_photo_s">Upload Photo/s of Product</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_customer_name">Customer Name</string>
    <string name="lbl_order_number">Order Number:</string>
    <string name="msg_save_successful">Save Successful!</string>
    <string name="msg_01_01_2023_11_5">01-01-2023 11:59</string>
    <string name="lbl_add_image">Add Image</string>
    <string name="msg_application_sup">Application Support</string>
    <string name="lbl_log_out">Log out</string>
    <string name="msg_item_name_7">ITEM NAME

\u20b1  750.00</string>
    <string name="lbl_50">50</string>
    <string name="msg_item_name_9">ITEM NAME

\u20b1  999.00</string>
    <string name="lbl_we_re_on_it">We\u2019re on it!</string>
    <string name="lbl_sex">Sex</string>
    <string name="msg_quantity_of_pro">Quantity of Product</string>
    <string name="msg_customer_feedba">Customer Feedback</string>
    <string name="msg_sign_in_with_gm">Sign in with Gmail</string>
    <string name="lbl_cherry">Cherry</string>
    <string name="lbl_size">Size</string>
    <string name="msg_item_name_3">ITEM NAME

\u20b1  3,000.00 
      1,500.00</string>
    <string name="msg_item_name_2">ITEM NAME

\u20b1  2,500.00</string>
    <string name="msg_item_name_1">ITEM NAME

\u20b1  1,500.00</string>
    <string name="lbl_198_00">\u20b1 198.00</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_120_ml">120 mL</string>
    <string name="msg_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="lbl_48">48</string>
    <string name="lbl_total_items">Total Items:</string>
    <string name="lbl_230202fff22ff2">230202FFF22FF2</string>
    <string name="msg_order_number_2">Order Number: 2138275627</string>
    <string name="msg_personal_inform2">Personal Information has been saved.
Click anywhere to continue.</string>
    <string name="msg_total_1_item2">Total (1 item):            \u20b1 90.00  </string>
    <string name="lbl_230202ddd11cc1">230202DDD11CC1</string>
    <string name="msg_please_enter_yo">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="msg_of_kindle_accou">of Kindle accounts.</string>
    <string name="msg_sign_in_with_fa">Sign in with Facebook</string>
    <string name="msg_successful_crea">Successful Creation!</string>
    <string name="msg_total_1_item">Total (1 item):            \u20b1 98.00  </string>
    <string name="lbl_order_id">Order ID:</string>
    <string name="lbl_delete_product">Delete Product?</string>
    <string name="msg_your_package_ha">Your package has been delivered!
Thank you for purchasing from our store!
We hope in serving you again in the future!</string>
    <string name="lbl_user">User</string>
    <string name="lbl_416_00">\u20b1 416.00</string>
    <string name="lbl_return_to_home">Return to Home</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_new_arrivals">New Arrivals!</string>
    <string name="msg_item_name_99">ITEM NAME

\u20b1 999.00</string>
    <string name="lbl_091212344567">091212344567</string>
    <string name="lbl_administrator">Administrator</string>
    <string name="lbl_overall_sales">OVERALL SALES</string>
    <string name="lbl_via">via</string>
    <string name="lbl_20">20</string>
    <string name="lbl_buy_again">Buy again</string>
    <string name="msg_kindle_scented">Kindle Scented Soy Wax Melts</string>
    <string name="lbl_22">2</string>
    <string name="lbl_kindle_ph">KINDLE PH</string>
    <string name="lbl_750_00">\u20b1  750.00</string>
    <string name="lbl_kindle">Kindle </string>
    <string name="msg_confirm_new_pas">Confirm New Password</string>
    <string name="lbl_scents_cherry">Scents: Cherry</string>
    <string name="msg_your_active_pay">Your Active Payment Methods</string>
    <string name="lbl_transactions2">Transactions</string>
    <string name="msg_transaction_per">Transaction per Day</string>
    <string name="lbl_pinterest">Pinterest</string>
    <string name="msg_clear_personal">Clear Personal Information?</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_sales_per_day">SALES PER DAY</string>
    <string name="lbl_15">15</string>
    <string name="lbl_fresh_bamboo">Fresh Bamboo</string>
    <string name="msg_create_an_accou">Create an account</string>
    <string name="lbl_php_193">PHP 193</string>
    <string name="lbl_privacy_policy">privacy policy</string>
    <string name="lbl_log_in_as">Log in as </string>
    <string name="msg_scents_strawbe">Scents: Strawberry</string>
    <string name="lbl_log_in3">Log In</string>
    <string name="lbl_log_in2">LOG IN</string>
    <string name="lbl_to_receive">To Receive</string>
    <string name="msg_choose_your_pay">Choose your Payment Method</string>
    <string name="lbl_add_to_cart">Add to Cart</string>
    <string name="msg_your_payment_ha">Your payment has been received and
being processed.
Thank you for shopping with us!</string>
    <string name="msg_what_is_kindle">What is KINDLE PH?</string>
    <string name="lbl_policy">Policy</string>
    <string name="lbl_3_items">3 Items</string>
    <string name="lbl_mm_yy">MM/YY</string>
    <string name="msg_are_you_sure_yo2">Are you sure you want to log out of your account?</string>
    <string name="lbl_98_00">\u20b1 98.00</string>
    <string name="lbl_facebook_inc">Facebook Inc.</string>
    <string name="lbl_received">Received </string>
    <string name="msg_create_product">Create Product Succesful!</string>
    <string name="msg_color_and_size">Color and Size: Gold 120 ml</string>
    <string name="lbl_3000_002">\u20b13000.00                                         
    </string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_yearly">Yearly</string>
    <string name="msg_short_descripti">Short Description about the Product</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_orders">Orders</string>
    <string name="msg_debit_or_credit">Debit or Credit Card</string>
    <string name="lbl_place_order">Place Order</string>
    <string name="msg_create_new_prod">Create New Product</string>
    <string name="lbl_gmail">Gmail</string>
    <string name="msg_total_order_32">Total Order (3 Item/s):</string>
    <string name="lbl_create_listing">Create Listing</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_no">No</string>
    <string name="msg_welcome_adminis">Welcome Administrator. Please Log In to Access the Administrator Side of the Application.</string>
    <string name="lbl_50_00">\u20b1 50.00</string>
    <string name="msg_password_change">Password Changed Successfully.
Click anywhere to continue.</string>
    <string name="lbl_transactions">Transactions </string>
    <string name="lbl2">\u20b1  </string>
    <string name="lbl_not_now">Not now</string>
    <string name="lbl3">\u20b1</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae ex sit amet ligula pretium pulvinar a at elit. Nunc mollis nisi nibh. Mauris suscipit ac neque quis tincidunt. Mauris quis quam vehicula, ornare velit a, porttitor ligula sollicitudinLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae ex sit amet ligula pretium pulvinar a at elit. Nunc mollis nisi nibh. Mauris suscipit ac neque quis tincidunt. </string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae ex sit amet ligula pretium pulvinar a at elit. Nunc mollis nisi nibh. Mauris suscipit ac neque quis tincidunt. Mauris quis quam vehicula, ornare velit a, porttitor ligula sollicitudin</string>
    <string name="lbl_address2">Address</string>
    <string name="lbl_maya_e_wallet">Maya e-Wallet</string>
    <string name="msg_password_has_be">Password has been changed.
Click anywhere to continue.</string>
    <string name="msg_preferred_payme">Preferred Payment Choice not here?</string>
    <string name="msg_connected_socia">Connected Socials</string>
    <string name="lbl_size_50ml">Size: 50ml</string>
    <string name="lbl_go_back">Go Back</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="msg_stocks_left_ou">Stocks left: Out of Stock</string>
    <string name="lbl_my">My </string>
    <string name="lbl_monthly">Monthly</string>
    <string name="lbl_our_story">OUR STORY</string>
    <string name="msg_homepage_previe">Homepage Preview</string>
    <string name="lbl_old_password">Old Password</string>
    <string name="lbl_weekly">Weekly</string>
    <string name="lbl_expiration">Expiration</string>
    <string name="lbl_continue_on">Continue on</string>
    <string name="lbl_scented_candle">Scented Candle</string>
    <string name="msg_if_you_wish_to">If you wish to add another product, click YES. Otherwise, click NO to return to the Dashboard Page.</string>
    <string name="lbl_product_images">Product Images</string>
    <string name="lbl_999_003">\u20b1999.00                                         
    </string>
    <string name="lbl_lemon">Lemon</string>
    <string name="msg_already_have_an2">Already have an account? </string>
    <string name="lbl_999_002">\u20b1 999.00</string>
    <string name="msg_add_payment_met">Add Payment Method</string>
    <string name="msg_want_more_payme">Want More Payment Methods?</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="msg_february_31_20">February 31, 2025</string>
    <string name="msg_total_4_item">Total (4 item):         \u20b1 456.00  </string>
    <string name="msg_city_region_p">City, Region, Postal Code</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_1_500_002">\u20b1  1,500.00</string>
    <string name="msg_you_ve_successf">You\u2019ve successfully added the 
product to your cart!
Please proceed to the Checkout</string>
    <string name="lbl_1_500_003">\u20b11,500.00                                         
    </string>
    <string name="lbl_account_name">Account Name</string>
    <string name="lbl_size_30g">Size: 30g</string>
    <string name="lbl_products_sold2">Products Sold</string>
    <string name="lbl_total">Total: </string>
    <string name="lbl_vanilla">Vanilla</string>
    <string name="lbl_edit">Edit</string>
    <string name="msg_kindle_soy_wax">Kindle Soy Wax Melts</string>
    <string name="lbl_delete">Delete</string>
    <string name="msg_kindle_candle_b">Kindle Candle Bottle</string>
    <string name="lbl_shipping_fee">Shipping Fee:</string>
    <string name="lbl_tvsmix18">Tvsmix18</string>
    <string name="lbl_stock_15_left">Stock: 15 Left</string>
    <string name="lbl_96">96</string>
    <string name="msg_customer_name">Customer Name: Aldrin Patrick Ong</string>
    <string name="lbl_php_50">PHP 50</string>
    <string name="msg_address_60_pin">Address: 60 Pina St., Gracepark Malabon City</string>
    <string name="lbl_php_49">PHP 49</string>
</resources>