<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listlolRowModel" type="com.kindleapp.app.modules.viewtransactions.data.model.ListlolRowModel"/>
    </data>
    <FrameLayout android:id="@+id/frameStacklol"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" style="@style/groupStylewhite_8">
        <LinearLayout android:id="@+id/linearColumnlol"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlol"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLol"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_lol"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_lol"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTvsmixEighteen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.81"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listlolRowModel.txtTvsmixEighteen}"
                    style="@style/txtInterbold16" tools:text="@string/lbl_tvsmix18"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCustomerName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtCustomerName}"
                style="@style/txtIntermedium13_1" tools:text="@string/msg_customer_name"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrderNumberTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtOrderNumberTwo}"
                style="@style/txtIntermedium13_1" tools:text="@string/msg_order_number_2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAddress60Pin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtAddress60Pin}"
                style="@style/txtInterbold13_2" tools:text="@string/msg_address_60_pin"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnkindlesoywax"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_72pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_72pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtKindleSoyWax"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtKindleSoyWax}"
                style="@style/txtIntersemibold16" tools:text="@string/msg_kindle_soy_wax"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtFreshBamboo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtFreshBamboo}"
                style="@style/txtIntermedium14" tools:text="@string/lbl_fresh_bamboo"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtVanilla"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtVanilla}"
                style="@style/txtIntermedium14" tools:text="@string/lbl_vanilla"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnshippingfee"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30pxv"
            android:layout_marginEnd="@dimen/_81pxh"
            android:layout_marginStart="@dimen/_81pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtX1"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_76pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtX1}"
                style="@style/txtIntermedium14" tools:text="@string/lbl_x1"/>
            <TextView android:ellipsize="end" android:id="@+id/txtX2"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtX2}"
                style="@style/txtIntermedium14" tools:text="@string/lbl_x2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtShippingFee"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtShippingFee}"
                style="@style/txtInterbold12_1" tools:text="@string/lbl_shipping_fee"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtLanguage}"
                style="@style/txtInterbold12_1" tools:text="@string/lbl_total"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnfortyeight"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtFortyEight"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtFortyEight}"
                style="@style/txtIntermedium14" tools:text="@string/lbl_48"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNinetySix"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtNinetySix}"
                style="@style/txtIntermedium14" tools:text="@string/lbl_96"/>
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtPrice}"
                style="@style/txtIntermedium12" tools:text="@string/lbl_php_49"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtPriceOne"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listlolRowModel.txtPriceOne}"
                style="@style/txtIntermedium12" tools:text="@string/lbl_php_193"/>
        </LinearLayout>
    </FrameLayout>
</layout>
